2001-02-21  Jeffrey Oldham  <oldham@codesourcery.com>

	* gcc.c (cc1_options): Add "-param".
	(DEFAULT_WORD_SWITCH_TAKES_ARG): Likewise.
	(option_map): Likewise.
	* toplev.c (display_help): Add entry for "--param".
	(independent_decode_option): Fix typographical error.

Wed Feb 21 18:57:28 CET 2001  Catherine Moore  <clm@redhat.com>
			      Bernd Schmidt  <bernds@redhat.com>
			      Jan Hubicka  <jh@suse.cz>

        * i386.c (function_arg_advance):  Pass SSE arguments in registers.
	(function_arg): Likewise.

Wed Feb 21 18:12:41 CET 2001  Jan Hubicka  <jh@suse.cz>

	* i386.md (mmx_lshrdi3, mmx_ashldi3): Guard by unspec.

2001-02-21  Kazu Hirata  <kazu@hxi.com>

	* config/h8300/h8300.md (iorsi3): Do not output an extra newline
	character.
	(xorsi3): Likewise.

Wed Feb 21 17:35:24 CET 2001  Jan Hubicka  <jh@suse.cz>

	* flow.c (init_propagate_block_info): Canon address and use single_set
	for killing dead memory stores.

2001-02-21  Jeffrey Oldham  <oldham@codesourcery.com>

	* Makefile.in (reorg.o): Add params.h dependence.
	* params.def: Fix typographical error in comment.
	(MAX_DELAY_SLOT_INSN_SEARCH): New parameter.
	* params.h: Modify introductory comment.
	(MAX_DELAY_SLOT_INSN_SEARCH): New parameter.
	* reorg.c: Add dependence on params.h.
	(redundant_insn): Add parameterized throttle for search.
	(fill_simple_delay_slots): Add a comment explaining a variable.
	Move conditional out of loop, simplifying code.
	(fill_eager_delay_slots): Fix typographical error in comment.

2001-02-20  Aldy Hernandez  <aldyh@redhat.com>

        * tm.texi (REVERSE_CONDEXEC_PREDICATES_P): New macro documentation.

        * flow.c (ior_reg_cond): Use REVERSE_CONDEXEC_PREDICATES_P macro.
        (REVERSE_CONDEXEC_PREDICATES_P): Define macro.

2001-02-21  Jason Merrill  <jason@redhat.com>

	* tree.h (DECL_UNINLINABLE): Move from C++ frontend.
	(struct tree_decl): Add uninlinable bitfield.
	* c-decl.c (duplicate_decls): Set it.
	* integrate.c (function_cannot_inline_p): Check it.
