@@ -1,3 +1,8 @@
+2001-02-21  Jeffrey D. Oldham  <oldham@codesourcery.com>
+
+	* gcc.c: Add comment explaining how to add a command-line option.
+	Add title to specs language comment.
+
 2001-02-21  Jeffrey Oldham  <oldham@codesourcery.com>
 
 	* gcc.c (cc1_options): Add "-param".
